--- a/src/page/main/index.less
+++ b/src/page/main/index.less
@@ -2,18 +2,13 @@
   height: 100%;
 
   .header-logo {
-    width: 200px;
-    height: 100%;
-    background-color: #40a9ff;
-    display: inline-block;
+    height: 48px;
+    color: white;
     text-align: center;
-  }
-  .header-other {
-    width: calc(100% - 200px);
-    display: inline-block;
+    font-size: 24px;
+    line-height: 48px;
   }
   .footer {
-    background-color: #808080;
     text-align: center;
     padding: 12px;
   }
