--- a/src/component/loading/index.css
+++ b/src/component/loading/index.css
@@ -1,10 +1,28 @@
+.loading-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.loading-container .loading-view {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.loading-container .item {
+    width: 14%;
+    height: 100%;
+    background-color: blue;
+    animation:loading-item .5s infinite;
+}
+.loading-container .item-1 { animation-delay: .1s }
+.loading-container .item-2 { animation-delay: .2s }
+.loading-container .item-3 { animation-delay: .3s }
+.loading-container .item-4 { animation-delay: .4s }
+.loading-container .item-5 { animation-delay: .5s }
 @keyframes loading-item {
     0% { height: 0; }
     50% { height: 100%; }
     100% { height: 0; }
-}
-.loading-item-1 {
-    width: 20px;
-    background-color: blue;
-    animation:loading-item .5s infinite;
 }
