--- a/src/common.less
+++ b/src/common.less
@@ -82,3 +82,25 @@ blockquote, q {
 :-ms-input-placeholder {
     color: #ddd;
 }
+
+// 对ant-table的样式改造
+.ant-table-placeholder {
+  display: none;
+}
+
+.ant-table-thead {
+  font-size: 14px;
+}
+
+.ant-pagination {
+  text-align: right;
+  padding-top: 15px;
+  font-size: 14px;
+  border-top: 1px solid #e8e8e8;
+  margin-top: -1px;
+
+  .ant-pagination-total-text, .ant-pagination-options {
+    float: left;
+    margin-left: 0;
+  }
+}
